gcc/testsuite/rust/rustc/ui/parser/keyword-in-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py in'

fn main() {
    let in = "foo"; // { dg-error "" "" { target *-*-* } }
}

